# NucDeEx

./: '  .gitignore  .gitmodules  CMakeLists.txt  GNUmakefile  LICENSE  Makefile  README.md  input  output  output_genie  output_neut  output_nuwro  plot_simulation.C  plot_simulation_11B.C  plot_simulation_comparison.C  plot_talys_comparison.C  run_cout_input.sh  run_plot_decay.sh  run_simulation.sh  run_talys.sh  setup.sh  sources.cmake
branching_ratio/: :qal  HOGE  Makefile  hoge_eve  hoge_glib  hoge_lib  input_11C  plot_talys_comparison.C  run_11C.sh  run_cout_input.sh  run_plot_decay.sh  run_talys.sh  test.C
geant4/: CMakeLists.txt  GNUmakefile  sources.cmake
include/: Deexcitation.hh  G4INCLNucDeExInterface.hh  G4NucDeExInterface.hh  G4NucDeExInterfaceMessenger.hh  NucDeExConsts.hh  NucDeExDeexcitation.hh  NucDeExDeexcitationBase.hh  NucDeExDeexcitationPhole.hh  NucDeExDeexcitationTALYS.hh  NucDeExEventInfo.hh  NucDeExNucleus.hh  NucDeExNucleusTable.hh  NucDeExParticle.hh  NucDeExRandom.hh  NucDeExUtils.hh  Nucleus.hh  NucleusTable.hh  Particle.hh  ReadTALYS.hh  consts.hh
inclxx/: CMakeLists.txt
input/: input_10B_ldmodel2_parity_optmodall  input_10Be_ldmodel2_parity_optmodall  input_10C_ldmodel2_parity_optmodall  input_10Li_ldmodel2_parity_optmodall  input_10N_ldmodel2_parity_optmodall  input_11B_ldmodel1  input_11B_ldmodel1_optmodall  input_11B_ldmodel1_parity  input_11B_ldmodel2  input_11B_ldmodel2_optmodall  input_11B_ldmodel2_parity  input_11B_ldmodel2_parity_optmodall  input_11B_ldmodel3  input_11B_ldmodel3_optmodall  input_11B_ldmodel3_parity  (+110 more)
(+292 files in other folders)
